fix spacing and borders

--- a/client/src/assets/scss/Components/TablePlanningA.scss
+++ b/client/src/assets/scss/Components/TablePlanningA.scss
@@ -1,5 +1,6 @@
 .table-planning-container {
     margin-top: 10px;
+    padding: 0px 10px;
     width: 180vh;
     height: 85vh;
     overflow-y: auto; 
