--- a/client/src/assets/scss/Dashboard/Dashboard.scss
+++ b/client/src/assets/scss/Dashboard/Dashboard.scss
@@ -17,7 +17,7 @@
         }
         .dashboard_content{
             width:100%;
-            padding: 20px;
+            padding: 20px 10px;
             overflow-y: auto;
             scroll-behavior: smooth;
             scrollbar-width: thin;
@@ -38,6 +38,7 @@
               }
             .dashboard_body_cont{
                 display: flex;
+                padding: 0px 10px;
                 @media only screen and (max-width: 1000px){
                     display: block;
                 }
